# silo

./: .gitignore  PROJECT.md  pyproject.toml
src/silo/: __init__.py
src/silo/agent/: __init__.py  client.py  cluster.py  cluster_router.py  cluster_schemas.py  daemon.py  discovery.py  retry.py  schemas.py
src/silo/backends/: factory.py  llamacpp.py  mlx_audio.py  mlx_lm.py  protocols.py
src/silo/cli/: agent_cmd.py  app.py  convert_cmd.py  doctor_cmd.py  down_cmd.py  flow_cmd.py  init_cmd.py  logs_cmd.py  models_cmd.py  ps_cmd.py  run_cmd.py  serve_cmd.py  setup_cmd.py  ui_cmd.py  up_cmd.py  update_cmd.py  wake_cmd.py
src/silo/config/: loader.py  models.py  paths.py  (+1 more)
tests/: conftest.py  test_agent.py  test_backends_factory.py  test_backends_llamacpp.py  test_backends_mlx_audio.py  test_backends_mlx_lm.py  test_backends_protocols.py  test_cli_convert.py  test_cli_doctor.py  test_cli_extended.py  test_cli_flow.py  test_cli_init.py  test_cli_models.py  test_cli_process.py  test_cli_run.py  test_cli_serve.py  test_cli_wake.py  test_cluster.py  test_cluster_router.py  test_config_loader.py  test_config_models.py  test_convert_mlx.py  test_discovery.py  test_doctor_checks.py  test_doctor_checks_extended.py  test_download_hf.py  test_flow_create_modal.py  test_flows_parser.py  test_flows_runner.py  test_process_manager.py  test_process_memory.py  test_process_pid.py  test_registry_detector.py  test_registry_store.py  test_retry.py  test_server_errors.py  test_server_metrics.py  test_server_routes_audio.py  test_server_routes_chat.py  test_server_routes_common.py  (+7 more)
(+57 files in other folders)
